# modelbridge-cc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  example_usage.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  fast-ci.yml
.serena/: project.yml
example/mas_bench/: README.md  hpopt_data_assimilation.py  mas_demo.py  simple_mas_example.py
example/mas_bench/masbench-resources/Dataset/FL1-2/: agent_size.sh
example/mas_bench/masbench-resources/Dataset/FS1-1/: agent_size.sh
example/mas_bench/masbench-resources/Dataset/FS1-3/: agent_size.sh
example/mas_bench/masbench-resources/Dataset/FS1-4/: agent_size.sh
example/mas_bench/masbench-resources/SimulatorScenario/: PedestrianModel.txt  RubyAgentBase.rb
example/neural_network/: README.md  config_mnist.toml  mnist_model_bridge.py  mnist_sklearn_bridge.py  neural_models.py
example/simple_benchmark/: README.md  config_sample.toml  hpopt_benchmark.py  simple_example.py
modelbridge/: __init__.py  __init__.pyi  types.py
modelbridge/core/: __init__.py  bridge.py  optimizer.py  regression.py
modelbridge/utils/: __init__.py  config_loader.py  data_manager.py  visualization.py
tests/: __init__.py  conftest.py
tests/fixtures/: conftest.py  test_utilities.py
tests/integration/: __init__.py  test_example_usage.py  test_model_bridge.py
tests/unit/: __init__.py  test_config_loader.py  test_data_manager.py  test_optimizer.py  test_properties.py  test_regression.py  test_types.py  test_visualization.py
